java: replace Files.read/write with readString/writeString